--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,13 @@ li{
     /* DEBUG */
     border: 1px solid black;
 }
+.smallcontainer{
+    width: 70%;
+    max-width: 1100px;
+    margin: 0 auto;
+    /* DEBUG */
+    border: 1px solid black;
+}
 /* HEADER */
 .header{
     display: flex;
@@ -59,9 +66,9 @@ li{
 
 }
 .bannertitle{
+    width: 100%;
     /* debug */
     height: 80px;
-    width: 100%;
     background-color: rgb(22, 131, 204);
 
 }
@@ -77,5 +84,48 @@ li{
     height: 100px;
     /* DEBUG*/
     background-color: rgb(255, 153, 0);
+
+}
+/* CARD SECTION */
+.cardsection{
+    display: flex;
+    flex-wrap: wrap;
+    
+
+}
+.cardraw{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    /* DEBUG */
+    border: 1px solid green;
+    height: 400px;
+    width: 100%;
+    
+
+}
+.cardtitle{
+    width: 100%;
+    /* debug */
+    height: 20%;
+    background-color: rgb(74, 23, 214);
+
+}
+.cardcol{ 
+    width: calc(90% / 3);
+    
+
+    /* debug */
+    background-color: burlywood;
+    height: 80%;
+    border: 1px solid black;
+
+}
+.cardfooter{
+    width: 100%;
+    margin-top: 20px;
+    /* debug */
+    height: 40%;
+    background-color: rgb(49, 235, 42);
 
 }
