feat:inseiti alcuni margin

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ li{
     /* DEBUG */
     border: 1px solid black;
 }
+.mt-20{
+    margin-top: 20px;
+}
 /* HEADER */
 .header{
     display: flex;
