--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,24 @@
     box-sizing: border-box;
 }
 img{
-    max-height: 100%;
+    max-width: 100%;
 }
-
-/* utility */
 li{
     list-style: none;
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+/* utility */
+
 .container{
     width: 80%;
     max-width: 1100px;
     margin: 0 auto;
     /* DEBUG */
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .smallcontainer{
     width: 70%;
@@ -28,29 +33,50 @@ li{
 .mt-20{
     margin-top: 20px;
 }
+.button{
+    display: inline-block;
+    background-color: blue;
+    color: white;
+    padding: 10px;
+
+}
+.pdt-20{
+    padding: 20px 0;
+}
 /* HEADER */
 .header{
     display: flex;
     justify-content: space-between;
+     padding: 20px;
     /* DEBUG */
-    background-color: rgb(238, 75, 75);
-    padding: 20px;
-    height: 100px;
+    /* height: 100px;
+    background-color: rgb(238, 75, 75); */
 }
 .list1{
+    display: flex;
+     gap: 20px;
     /* DEBUG */
-    border: 1px solid black;
+    /* border: 1px solid black;
     background-color: white;
     width: 200px;
-    height: 60px;
+    height: 60px; */
 
 }
 .list2{
+    display: flex;
+     gap: 20px;
       /* DEBUG */
-      border: 1px solid black;
+      /* border: 1px solid black;
       background-color: rgb(94, 23, 226);
       width: 200px;
-      height: 60px;
+      height: 60px; */
+}
+.small-button{
+    background-color: blue;
+    color: white;
+    padding: 5px;
+    
+
 }
 
 /* BANNER */
@@ -58,35 +84,42 @@ li{
     background-color: #b4d0e6;
     padding: 30px 0 0 0;
     /* DEBUG */
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
 }
 .bannerraw{
     flex-wrap: wrap;
     display: flex;
+    padding: 15px;
     /* DEBUG */
-    background-color: white;
+    /* background-color: white; */
 
 }
 .bannertitle{
+   
     width: 100%;
+    font-size: 35px;
     /* debug */
-    height: 80px;
-    background-color: rgb(22, 131, 204);
+    /* height: 80px;
+    background-color: rgb(22, 131, 204); */
 
 }
 .bannercol1{
-    height: 100px;
+    height: 60%;
+    padding: 30px 0;
     width: 40%;
+    font-size: 22px;
     /* DEBUG*/
-    background-color: aqua;
+    /* background-color: aqua; */
+    /* height: 100px; */
 
 }
 .bannercol2{
     width: 60%;
-    height: 100px;
+    
     /* DEBUG*/
-    background-color: rgb(255, 153, 0);
+    /* background-color: rgb(255, 153, 0);
+    height: 100px; */
 
 }
 /* CARD SECTION */
