--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ a{
 }
 /* HEADER */
 .header{
+    position: fixed;
+    background-color: white;
+    width: 100%;
     display: flex;
     justify-content: space-between;
      padding: 20px;
