--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,19 @@ img{
 }
 li{
     list-style: none;
+    padding: 8px 0;
 }
 a{
     text-decoration: none;
     color: inherit;
+}
+hr{
+    width: 15%;
+    margin: 10% 0 10% 0;
+    color: lightgray;
+}
+.check-color{
+    color: blue;
 }
 
 /* utility */
@@ -28,7 +37,7 @@ a{
     max-width: 1100px;
     margin: 0 auto;
     /* DEBUG */
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .mt-20{
     margin-top: 20px;
@@ -37,11 +46,19 @@ a{
     display: inline-block;
     background-color: blue;
     color: white;
-    padding: 10px;
+    padding: 10px 30px;
+    margin: 30px 0;
 
+}
+.buynow{
+    text-decoration: underline;
+    color: blue;
 }
 .pdt-20{
     padding: 20px 0;
+}
+.pdt-30{
+    padding: 30px 0 0 0;
 }
 /* HEADER */
 .header{
@@ -137,61 +154,111 @@ a{
     flex-wrap: wrap;
     justify-content:space-between;
     /* DEBUG */
-    border: 1px solid green;
-    width: 100%;
+
     
 
 }
+.title{font-size: 25px;
+    padding-bottom: 20px;
+
+}
+.radio{
+padding-right: 20px;
+}
 .cardtitle{
     width: 100%;
+    padding: 20px;
+    
     /* debug */
-    height: 60px;
-    background-color: rgb(74, 23, 214);
+    /* height: 60px;
+    background-color: rgb(74, 23, 214); */
 
 }
 .cardcol{ 
     margin: 10px 0;
-    width: calc(90% / 3);
-    
+    padding: 15px 15px 30px 15px ;
+    width: calc(90%  / 3);
+    border: 1px solid lightgray;
 
     /* debug */
-    background-color: burlywood;
-    height: 210px;
-    border: 1px solid black;
-
+    /* background-color: burlywood;
+    height: 210px;*/
 }
+
+/* INSIDE CARD */
+.title-inside{
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    width: 100%;
+    border: 1px solid lightgray;
+}
+.list-top-inside{
+    display: flex;
+    width: 100%;
+    padding-bottom: 20px;
+}
+.list-bot-inside{
+    display: flex;
+    width: 100%;
+}
+.mini-month{
+    color: lightgray;
+}
+.button-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* CARD FOOTER */
 .cardfooter{
     width: 100%;
+    border: 1px solid lightgray;
+    padding: 20px;
     /* debug */
-    height: 50px;
-    background-color: rgb(49, 235, 42);
+    
 
-}
+    }
+    .cardfooter-mid{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .cardfooter-left{
+        width: 50%;
+    }
+    .cardfooter-right{
+        width: 30%;
+    }
+    
 /* MIDSECTION */
 .midsection{
-padding 20px
 }
 .midraw{
     display: flex;
     flex-wrap: wrap;
     justify-content:space-between;
-    /* DEBUG */
-    border: 1px solid rgb(231, 97, 19);
-    width: 100%;
+   
 
 }
 .midcol1{
     width: 60%;
-/* DEBUG */
-height: 200PX;
-background-color: lightgreen;
 }
 .midcol2{
+    padding: 20px;
     width: 40%;
-    /* DEBUG */
-    height: 200PX;
-    background-color: blueviolet;
 
+
+}
+.mid-button{
+    display: inline-block;
+    border: 1px solid black;
+    background-color: white
+    color: black;
+    padding:10px;
+    margin: 20px 0 0 0;
+    
 }
 /* DROP SECTION */
 .dropsection{
@@ -202,25 +269,20 @@ background-color: lightgreen;
     flex-wrap: wrap;
     justify-content:space-between;
     /* DEBUG */
-    border: 1px solid rgb(19, 22, 231);
-    width: 100%;
 
 
 }
 .dropcoltitle{
+    text-align: center;
+    padding: 30px;
     width: 100%;
-    /* DEBUG */
-    background-color: brown;
-    height: 120px;
+    
 
 }
 .dropcol{
     margin-top: 10px;
     width: calc(90%/3);
     /* DEBUG */
-    height: 150px;
-    background-color: blue;
-    border: 1px solid black;
 
 }
 /* FINAL SECTION */
@@ -228,18 +290,9 @@ background-color: lightgreen;
 
 }
 .finaltitle{
- /* DEBUG */
-
- height: 150px;
- background-color: rgb(160, 160, 192);
- border: 1px solid black;
-}
-.finaltag{
-     /* DEBUG */
-     height: 50px;
-     background-color: rgb(65, 238, 137);
-     border: 1px solid black;
-
+    margin-right: 250px;
+    padding: 30px 0px 10px 0;
+    font-size: 25px;
 }
 /* FOOTER */
 .footersection{
