--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,11 @@ hr{
     width: 80%;
     max-width: 1100px;
     margin: 0 auto;
-   
 }
 .smallcontainer{
     width: 70%;
     max-width: 1100px;
     margin: 0 auto;
-  /
 }
 .mt-20{
     margin-top: 20px;
@@ -69,21 +67,19 @@ hr{
 }
 .list1{
     display: flex;
-     gap: 20px;
-   
-
+    gap: 20px;
 }
 .list2{
     display: flex;
      gap: 20px;
-   
 }
 .small-button{
     background-color: blue;
     color: white;
     padding: 5px;
-    
-
+}
+.small-button:hover{
+    background-color: lightskyblue;
 }
 
 /* BANNER */
@@ -108,7 +104,6 @@ hr{
 
 }
 .bannercol1{
-    height: 60%;
     padding: 30px 0;
     width: 40%;
     font-size: 22px;
@@ -117,10 +112,11 @@ hr{
 }
 .bannercol2{
     width: 60%;
-    
 
+    
 }
 /* CARD SECTION */
+
 .cardsection{
     display: flex;
     flex-wrap: wrap;
@@ -155,23 +151,25 @@ padding-right: 20px;
     width: calc(90%  / 3);
     border: 1px solid lightgray;
 
-
+}
 /* INSIDE CARD */
+
+.list-top-inside{
+    display: flex;
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+.list-bot-inside{
+    display: flex;
+    width: 100%;
+}
 .title-inside{
     height: 30px;
     line-height: 30px;
     text-align: center;
     width: 100%;
     border: 1px solid lightgray;
-}
-.list-top-inside{
-    display: flex;
-    width: 100%;
-    padding-bottom: 20px;
-}
-.list-bot-inside{
-    display: flex;
-    width: 100%;
 }
 .mini-month{
     color: lightgray;
